[tool.poetry]
name = "wsaver"
version = "1.0.2"
description = "Tool to save and restore window positions on a Linux desktop"
authors = ["Lance Jacobs <lance@ljacobs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
frosch = "^0.1.9"

[tool.poetry.scripts]
wsaver = "wsaver.wsaver:main"

[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.13.0"
pre-commit = "^2.20.0"
pytest = "^6.2.5"
black = "^22.6.0"
isort = "^5.10.1"
isort-black-compat = "^4.3.211"
mypy = "^0.971"

[tool.coverage.paths]
source = ["pget"]

[tool.coverage.run]
branch = true
source = ["pget"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff.mccabe]
max-complexity = 18

[tool.flake8]
extend-ignore = "E203, E501, W605"
max-line-length = 120
max-complexity = 18
